Changes to CSS and Images
Enhancing the UX

--- a/Wk2/Yanes_Jesus_Prototype/about.html
+++ b/Wk2/Yanes_Jesus_Prototype/about.html
@@ -93,7 +93,7 @@
                         </ul>
                     </section>
                     <section class="small-12 large-5 columns">
-                        <p class="right">Copyright &copy; 2014 Wilson's Barbeque</p>
+                        <p class="right">Copyright &copy; 2014 Lotus Music</p>
                     </section>
                 </div>
             </footer>
